# starks-verifier

./: .gitignore  Cargo.toml  README.md
benches/: all.rs  fft.rs  field.rs  hash.rs  polynom.rs
docs/: assembly.md
src/: lib.rs
src/crypto/: hash.rs  merkle.rs  mod.rs
src/examples/: collatz.rs  comparison.rs  conditional.rs  fibonacci.rs  merkle.rs  mod.rs  range.rs  stacktest.rs  testrange.rs  utils.rs
src/math/: fft.rs  field.rs  mod.rs  parallel.rs  polynom.rs  quartic.rs
src/processor/: mod.rs  opcodes.rs
src/processor/decoder/: mod.rs  tests.rs
src/processor/stack/: mod.rs
src/processor/stack/tests/: comparisons.rs  mod.rs
src/programs/: hashing.rs  inputs.rs  mod.rs
src/programs/assembly/: errors.rs  mod.rs  parsers.rs
src/programs/blocks/: mod.rs  tests.rs
src/programs/tests/: mod.rs  utils.rs
src/stark/: mod.rs  options.rs  proof.rs  prover.rs  verifier.rs
src/stark/constraints/: constraint_poly.rs  constraint_table.rs  evaluator.rs  mod.rs  utils.rs
src/stark/constraints/decoder/: flow_ops.rs  mod.rs  op_bits.rs  sponge.rs  tests.rs
src/stark/constraints/stack/: arithmetic.rs  comparison.rs  conditional.rs  hash.rs  input.rs  manipulation.rs  mod.rs
src/stark/fri/: mod.rs  prover.rs  utils.rs  verifier.rs
src/stark/trace/: mod.rs  trace_state.rs  trace_table.rs
src/stark/utils/: coefficients.rs  mod.rs  proof_of_work.rs
src/tests/: mod.rs
src/utils/: hasher.rs  mod.rs  sponge.rs
