[package]
name = "pallet-starksVM"
version = "0.1.0"
edition = "2018"

[[bench]]
name = "all"
harness = false

[dependencies]
sp-std = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
hex = { version = "0.4.2", optional = true }
rand = "0.7.3"
blake3 = { version = "0.3.5", default-features = false }
sha3 = { version = "0.8.2", default-features = false }
bincode = { version = "1.3.1", default-features = false,optional = true }
serde = { version = "1.0.114", features = ["derive"], optional = true }
log = { version = "0.4.14", default-features = false }
hashbrown = { version = "0.1.6", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
criterion = "0.3.3"
num-bigint = "0.3.0"

[features]
default = ["std"]
std = [
	"bincode",
	"sp-std/std",
	"sp-io/std",
	"log/std",
	"hex",
	"serde",
]