[package]
name = "starksVM"
version = "0.1.0"
edition = "2018"


[dependencies]
hex = "0.4.2"
rand = {version = "0.7.3"}
rand_chacha = "0.3.1"
rand_core = "0.6.3"
blake3 = "0.3.5"
sha3 = "0.8.2"
sha2 = { version = "0.9.2", default-features = false, optional = true }
crossbeam-utils = "0.8"
bincode = "1.3.1"
hashbrown = { version = "0.1.6", features = ["serde"] }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
serde_json = "1.0.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
sp-std = { git = "https://github.com/zCloak-Network/substrate", default-features = false }
sp-io = { git = "https://github.com/zCloak-Network/substrate", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
# wasm-bindgen = "0.2.74"
web-sys = "0.3.51"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
# wasm-bindgen-test = "0.3.24"
env_logger = "0.7.1"
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", features = ["blake2b"]}
b2sum-rs = {git = "https://github.com/jonathanxuu/b2sum-rs.git", default-features = false}

[dev-dependencies]
criterion = "0.3.3"
num-bigint = "0.3.0"

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-io/std",
	"codec/std",
	"sha2/std",

    # "rand/std",
]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[profile.release]
debug = true
